tests/str_esc_ucode_err02.json.err
Parse error at line 001

001: ["Invalid \u0-"]
                   ^
Expected four hexadecimal digits
